--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,12 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">My Application</string>
-    <string name="Hello">Hello world!</string>
+    <string name="Hello">Thanks for using this App</string>
     <string name="myName">Yoon Ha Neul</string>
+    <string name="myDep">CSEE</string>
+    <string name="myStuNum">21500453</string>
+    <string name="myMail">hn1226@naver.com</string>
+    <string name="myPhone" tools:ignore="TypographyDashes">010-2644-1226</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -9,4 +14,6 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_feed">Feed</string>
+    <string name="title_profile">Profile</string>
 </resources>
