--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_bottom_navigation">Bottom_navigation</string>
     <string name="title_home">Home</string>
+    <string name="title_upload">Upload</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_feed">Feed</string>
     <string name="title_profile">Profile</string>
+    <string name="title_friend">Friend</string>
 </resources>
